# podpilot

./: .editorconfig  .env.example  .gitignore  Directory.Build.props  PodPilot.slnx  README.md  docker-compose.yml  observability-test-out.txt  stylecop.json
.cursor/rules/: architecture.mdc  bug-prevention.mdc  dotnet-backend.mdc  dotnet-infrastructure.mdc  react-frontend.mdc  testing.mdc
.github/workflows/: ci.yml  release.yml  security-scan.yml
deploy/aws/: README.md  ecs-task-definition.json
deploy/azure/: README.md  container-apps.bicep
deploy/gcp/: README.md  cloudrun.yaml
deploy/k8s/: quickstart.md
docs/: api-reference.md  architecture.md  best-practices.md  billing.md  branding.md  cli.md  deployment.md  installation.md  mcp.md  models.md  plugins.md  providers.md  routing.md  sdk.md  security.md  troubleshooting.md
docs/insomnia/: PodPilot.insomnia.json
docs/openapi/: README.md
docs/postman/: PodPilot.postman_collection.json
samples/anthropic/: README.md
samples/claude-code/: README.md
samples/cline/: README.md
samples/continue/: README.md
samples/cursor/: README.md
samples/openai/: README.md
samples/roo-code/: README.md
sdk/dotnet/: Directory.Build.props  README.md
sdk/go/: README.md  client.go  go.mod
sdk/java/: README.md  pom.xml
sdk/python/: README.md  pyproject.toml
sdk/python/podpilot/: __init__.py  client.py
sdk/typescript/: README.md  package.json
src/PodPilot.Api/: Dockerfile  PodPilot.Api.csproj  (+5 more)
web/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+1178 files in other folders)
